--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,14 +8,11 @@
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@mipmap/ic_launcher"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppReceitas"
         tools:targetApi="31">
-        <activity
-            android:name=".ShowRecipeActivity"
-            android:exported="false"
-            android:theme="@style/Theme.AppReceitas" />
+
         <activity
             android:name=".Home"
             android:exported="false" />
